feat: bump to 2.4.12

--- a/test.html
+++ b/test.html
@@ -33,6 +33,6 @@
         <title> index </title>
     </head>
     <body>
-      <iframe src="http://bkui-vue2.ielgnaw.oa.com/#/sideslider/example" width="100%" height="1000"></iframe>
+      <iframe src="/#/sideslider/example" width="100%" height="1000"></iframe>
     </body>
 </html>
