feat: bump to 2.5.2 && change document title

--- a/example/index.html
+++ b/example/index.html
@@ -36,7 +36,7 @@
     <meta name="format-detection" content="telephone=no, email=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="referrer" content="never" />
-    <title> 蓝鲸 MagicBox-Vue 组件库 </title>
+    <title> 蓝鲸 MagicBox-Vue 组件库 | 腾讯蓝鲸智云</title>
   </head>
   <body>
     <div id="root"></div>
