feat: bump to 2.5.6

--- a/single.html
+++ b/single.html
@@ -78,7 +78,7 @@
             }
         </style>
         <!-- 引入 Vue -->
-        <script src="https://cdn.bootcss.com/vue/2.5.22/vue.js"></script>
+        <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-5-y/vue/2.5.22/vue.js"></script>
         <!-- 引入 bk-magic-vue 组件库 -->
         <script src="./dist/bk-magic-vue.js"></script>
     </head>
@@ -262,7 +262,6 @@
             Object.assign(bkMagicVue.lang.enUS, en)
 
             bkMagicVue.locale.use(bkMagicVue.lang['enUS'])
-
 
             Vue.mixin(bkMagicVue.locale.mixin)
 
